// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Opinion Reducers Should handle opinionVoteSuccess and deleteOpinionVoteSuccess 1`] = `
Object {
  "opinionsById": Object {
    "1": Object {
      "id": 1,
      "userHasVote": true,
      "user_vote": 1,
      "votes": Array [
        Object {
          "user": Object {
            "uniqueId": "admin",
          },
          "value": 1,
        },
      ],
      "votesCount": 1,
      "votesCountMitige": 0,
      "votesCountNok": 0,
      "votesCountOk": 1,
    },
  },
}
`;

exports[`Opinion Reducers Should handle versionVoteSuccess and deleteVersionVoteSuccess 1`] = `
Object {
  "versionsById": Object {
    "1": Object {
      "id": 1,
      "userHasVote": true,
      "user_vote": 1,
      "votes": Array [
        Object {
          "user": Object {
            "uniqueId": "admin",
          },
          "value": 1,
        },
      ],
      "votesCount": 1,
      "votesCountMitige": 0,
      "votesCountNok": 0,
      "votesCountOk": 1,
    },
  },
}
`;
